# dinamica-computacional

./: .gitignore  CHANGELOG_DEV.md  CLEANUP_REPORT.md  DEBUG_CHECKLIST.md  Makefile  README.md  hinge-return-mapping.patch  portico_shm.py  pyproject.toml  pytest.ini  quickstart.md  rotula_plastica.py  sitecustomize.py
.claude/: context_prompt.md
.github/workflows/: tests.yml
.streamlit/: config.toml
app/: __init__.py  app.py
app/components/: __init__.py  dynamic_viewer.py  frame_editor.py  modal_viewer.py  result_cards.py  section_viewer.py
app/pages/: 01_Sections.py  02_Frame.py  03_Modal.py  04_Dynamic.py  05_Results.py
app/services/: __init__.py  dynamic_service.py  export_service.py  frame_service.py  modal_service.py  section_service.py  session_schema.py
dinamica_computacional/core/: model.py  (+2 more)
docs/: ARCHITECTURE.md  EVIDENCE_LEVEL.md  INPUT_FORMAT.md  hinge_return_mapping_patch.md  input_deck_v2.md
examples/: Frame-Test.py  Job-1.inp  README.md  demo_frame.py  demo_interaction_and_hinge.py  demo_job_infrastructure.py  demo_portico_problema4.py  demo_portico_problema4_v4.py  portal_from_inp.py  untitled0.py
inputs/: portal_problem4.inp
legacy/: README.md
outputs/: problem2_interaction_S1_summary.txt  problem2_interaction_S2_summary.txt  problem2_runinfo.json  problem3_runinfo.json  problem4_summary.txt  problem5_fiber_interaction_summary.txt  problem5_runinfo.json
plastic_hinge/: __init__.py  _numba.py  fiber_section.py  geometry.py  hinge_factory.py  hinge_nm.py  nm_surface.py  rc_section.py  return_mapping.py
plastic_hinge_nm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  fixtures.py  test_abaqus_like_reporting.py  test_aluminum_sections.py  test_app_result_serialization.py  test_app_services_dynamic.py  test_app_services_frame.py  test_app_services_modal.py  test_app_services_sections.py  test_app_ui_imports.py  test_app_ui_modal_dynamic_imports.py  test_assemble_linear_beam2d.py  test_beam_benchmark_reporting.py  test_beam_benchmarks_theory.py  test_corotational_pdelta.py  test_dof_and_bc.py  test_export_service.py  test_frame_plots.py  test_hht_alpha_energy_balance.py  test_hht_alpha_linear_sdoff.py  test_hinge_mtheta_return_mapping.py  test_hinge_nm_surface_projection.py  test_inp_parser_end_to_end.py  test_inp_runner.py  test_input_deck_v2.py  test_modal_analysis.py  test_modal_condensation.py  test_modal_eigensolver.py  test_plotly_charts.py  test_plotting_sampling.py  test_portal_frame_builder.py  test_post_results.py  test_problem2_hinge_nm.py  test_problem4_fiber_gravity_symmetry.py  test_problema2_consistency.py  test_problema4_runs.py  test_profile_database.py  test_rc_sections.py  test_return_mapping_vertex_case.py  test_sections_base.py  (+4 more)
tools/: __init__.py  clean_outputs.py  clean_repo.py  inp_normalize.py  profile_run.py  profiling_utils.py  smoke_app_services.py  smoke_test.py
(+139 files in other folders)
