[project]
name = "plastic-hinge-nm"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib"]

[project.optional-dependencies]
dev = ["pytest"]
test = ["pytest"]
numba = ["numba>=0.61; python_version>=\"3.10\""]

[project.scripts]
dc-solver-tests = "pytest:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["dc_solver*", "problems*", "plastic_hinge*"]
