
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dc-solver"
version = "0.2.0"
description = "2D frame solver for structural dynamics: nonlinear static, modal, and time-history analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
]

[project.urls]
Repository = "https://github.com/sflabbe/dinamica-computacional"

[project.optional-dependencies]
numba = ["numba>=0.61; python_version >= '3.10' and python_version < '3.14'"]
# Reserved for Phase 2 — do not install yet:
# modal = ["scipy>=1.10"]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
dc-solver-tests = "pytest:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["dc_solver*", "problems*", "plastic_hinge*"]
exclude = ["tests*", "examples*", "legacy*", "tools*"]

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "integration: tests that exercise integration boundaries between local components",
    "optional_external: tests that require auxiliary repositories or editable installs",
    "slow: long-running integration or dynamic tests; run with pytest -q -m slow",
]
